# shop-flow

./: .gitignore  Cargo.toml
catalog/: Cargo.toml  build.rs
catalog/src/: catalog.rs  server.rs
interface/: client.js  server.js
interface/public/: index.html
proto/catalog/v1/: catalog.proto
